k8s/namespaces/monitoring/loki/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-https
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`loki.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: loki
          port: 3000
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loki-http
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`loki.oglesby.io`)
      kind: Rule
      middlewares:
      - name: internal-whitelist
        namespace: traefik
      - name: redirect-https
        namespace: traefik
      services:
        - name: loki
          port: 3000
